# PyTerm

./: LICENSE  README.md
PyTerm Package/: LICENSE  README.md  pyproject.toml
PyTerm Package/src/PyTermint/: PyTerm.py  __init__.py
